mongodb.txt
use studenttudentdb
switched to db studenttudentdb
use studentdb
switched to db studentdb
show student
MongoshInvalidInputError: [COMMON-10001] 'student' is not a valid argument for "show".
show collections
db.student.insertOne({})
{
  acknowledged: true,
  insertedId: ObjectId('6a3a30b9fee2965580738aab')
}
db.student.insertOne({name: "teja",id:1,city:"Nellore" })
{
  acknowledged: true,
  insertedId: ObjectId('6a3a3110fee2965580738aac')
}
db.student.findOne({name:"teja"})
{
  _id: ObjectId('6a3a3110fee2965580738aac'),
  name: 'teja',
  id: 1,
  city: 'Nellore'
}
db.student.insertMany([{name: "teja",id:1,city:"Nellore" },{name: "bhanu",id:2,city:"Nellore" },{name: "abhi",id:3,city:"Nellore" }])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a3a33c0fee2965580738aad'),
    '1': ObjectId('6a3a33c0fee2965580738aae'),
    '2': ObjectId('6a3a33c0fee2965580738aaf')
  }
}
db.student.updateOne({name:"teja"},{$set:{age:26}},{name:"Arun"},{$set:{age:24}},{name:"karthik"},{$set:{age:20}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.student.find({age:($gt:24)})
SyntaxError: Unexpected token, expected "," (1:25)

> 1 | db.student.find({age:($gt:24)})
    |                          ^
db.student.find({age:{$gt:24}})
{
  _id: ObjectId('6a3a3110fee2965580738aac'),
  name: 'teja',
  id: 1,
  city: 'Nellore',
  age: 26
}
db.student.find({sor:[{city:'hyderabad'},{city:'Banglore'}]})
 
db.student.find({$or:[{city:'hyderabad'},{city:'Banglore'}]})
db.student.find({$or:[{city:'nwllore'},{city:'Banglore'}]})
db.student.find({$or:[{city:'nellore'},{city:'Banglore'}]})
db.student.find({$or:[{city:'nellore'},{city:'Banglore'}]})
db.student.find({$or:[{city:'nellore'},{city:'nellore'}]})
db.student.find({$or:[{city:'Nellore'},{city:'Nellore'}]})
{
  _id: ObjectId('6a3a3110fee2965580738aac'),
  name: 'teja',
  id: 1,
  city: 'Nellore',
  age: 26
}
{
  _id: ObjectId('6a3a33c0fee2965580738aad'),
  name: 'teja',
  id: 1,
  city: 'Nellore'
}
{
  _id: ObjectId('6a3a33c0fee2965580738aae'),
  name: 'bhanu',
  id: 2,
  city: 'Nellore'
}
{
  _id: ObjectId('6a3a33c0fee2965580738aaf'),
  name: 'abhi',
  id: 3,
  city: 'Nellore'
}
db.student.find().sort({age:1})
{
  _id: ObjectId('6a3a30b9fee2965580738aab')
}
{
  _id: ObjectId('6a3a33c0fee2965580738aad'),
  name: 'teja',
  id: 1,
  city: 'Nellore'
}
{
  _id: ObjectId('6a3a33c0fee2965580738aae'),
  name: 'bhanu',
  id: 2,
  city: 'Nellore'
}
{
  _id: ObjectId('6a3a33c0fee2965580738aaf'),
  name: 'abhi',
  id: 3,
  city: 'Nellore'
}
{
  _id: ObjectId('6a3a3110fee2965580738aac'),
  name: 'teja',
  id: 1,
  city: 'Nellore',
  age: 26
}
db.student.find().limit(2)
{
  _id: ObjectId('6a3a30b9fee2965580738aab')
}
{
  _id: ObjectId('6a3a3110fee2965580738aac'),
  name: 'teja',
  id: 1,
  city: 'Nellore',
  age: 26
}
db.student.distinct()
MongoServerError[IDLFailedToParse]: BSON field 'distinctCommandRequest.key' is missing but a required field
db.student.distinct("city")
[ 'Nellore' ]
db.student.distinct("name")
[ 'abhi', 'bhanu', 'teja' ]
db.student.aggreagate([{$groupby:{avg:}}])
SyntaxError: Unexpected token (1:38)

> 1 | db.student.aggreagate([{$groupby:{avg:}}])
    |                                       ^
db.createCollection("product")
{ ok: 1 }
show collections
product
student
db.product.insertMany([
{
    id: 1,
    product_name: "Chair",
    product_price: 450,
    product_material: "Soft",
    product_color: "Red"
},
{
    id: 2,
    product_name: "Table",
    product_price: 700,
    product_material: "Wood",
    product_color: "Brown"
},
{
    id: 3,
    product_name: "Sofa",
    product_price: 900,
    product_material: "Soft",
    product_color: "Blue"
},
{
    id: 4,
    product_name: "Bed",
    product_price: 550,
    product_material: "Steel",
    product_color: "Indigo"
},
{
    id: 10,
    product_name: "Cupboard",
    product_price: 492,
    product_material: "Soft",
    product_color: "indigo"
},
{
    id: 6,
    product_name: "Lamp",
    product_price: 28,
    product_material: "Plastic",
    product_color: "White"
}
])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a3b5eacfee2965580738ab0'),
    '1': ObjectId('6a3b5eacfee2965580738ab1'),
    '2': ObjectId('6a3b5eacfee2965580738ab2'),
    '3': ObjectId('6a3b5eacfee2965580738ab3'),
    '4': ObjectId('6a3b5eacfee2965580738ab4'),
    '5': ObjectId('6a3b5eacfee2965580738ab5')
  }
}
db.product.find()
{
  _id: ObjectId('6a3b5eacfee2965580738ab0'),
  id: 1,
  product_name: 'Chair',
  product_price: 450,
  product_material: 'Soft',
  product_color: 'Red'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab1'),
  id: 2,
  product_name: 'Table',
  product_price: 700,
  product_material: 'Wood',
  product_color: 'Brown'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab2'),
  id: 3,
  product_name: 'Sofa',
  product_price: 900,
  product_material: 'Soft',
  product_color: 'Blue'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab3'),
  id: 4,
  product_name: 'Bed',
  product_price: 550,
  product_material: 'Steel',
  product_color: 'Indigo'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab4'),
  id: 10,
  product_name: 'Cupboard',
  product_price: 492,
  product_material: 'Soft',
  product_color: 'indigo'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab5'),
  id: 6,
  product_name: 'Lamp',
  product_price: 28,
  product_material: 'Plastic',
  product_color: 'White'
}
db.product.find({
    product_price: {
        $gte: 400,
        $lte: 800
    }
})
{
  _id: ObjectId('6a3b5eacfee2965580738ab0'),
  id: 1,
  product_name: 'Chair',
  product_price: 450,
  product_material: 'Soft',
  product_color: 'Red'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab1'),
  id: 2,
  product_name: 'Table',
  product_price: 700,
  product_material: 'Wood',
  product_color: 'Brown'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab3'),
  id: 4,
  product_name: 'Bed',
  product_price: 550,
  product_material: 'Steel',
  product_color: 'Indigo'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab4'),
  id: 10,
  product_name: 'Cupboard',
  product_price: 492,
  product_material: 'Soft',
  product_color: 'indigo'
}
db.product.find({
    $or: [
        { product_price: { $lt: 400 } },
        { product_price: { $gt: 600 } }
    ]
})
{
  _id: ObjectId('6a3b5eacfee2965580738ab1'),
  id: 2,
  product_name: 'Table',
  product_price: 700,
  product_material: 'Wood',
  product_color: 'Brown'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab2'),
  id: 3,
  product_name: 'Sofa',
  product_price: 900,
  product_material: 'Soft',
  product_color: 'Blue'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab5'),
  id: 6,
  product_name: 'Lamp',
  product_price: 28,
  product_material: 'Plastic',
  product_color: 'White'
}
db.product.find({
    product_price: { $gt: 500 }
}).limit(4)
{
  _id: ObjectId('6a3b5eacfee2965580738ab1'),
  id: 2,
  product_name: 'Table',
  product_price: 700,
  product_material: 'Wood',
  product_color: 'Brown'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab2'),
  id: 3,
  product_name: 'Sofa',
  product_price: 900,
  product_material: 'Soft',
  product_color: 'Blue'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab3'),
  id: 4,
  product_name: 'Bed',
  product_price: 550,
  product_material: 'Steel',
  product_color: 'Indigo'
}
db.product.find(
    {},
    {
        product_name: 1,
        product_material: 1,
        _id: 0
    }
)
{
  product_name: 'Chair',
  product_material: 'Soft'
}
{
  product_name: 'Table',
  product_material: 'Wood'
}
{
  product_name: 'Sofa',
  product_material: 'Soft'
}
{
  product_name: 'Bed',
  product_material: 'Steel'
}
{
  product_name: 'Cupboard',
  product_material: 'Soft'
}
{
  product_name: 'Lamp',
  product_material: 'Plastic'
}
db.product.find({
    id: 10
})
{
  _id: ObjectId('6a3b5eacfee2965580738ab4'),
  id: 10,
  product_name: 'Cupboard',
  product_price: 492,
  product_material: 'Soft',
  product_color: 'indigo'
}
db.product.find(
    {},
    {
        product_name: 1,
        product_material: 1,
        _id: 0
    }
)
{
  product_name: 'Chair',
  product_material: 'Soft'
}
{
  product_name: 'Table',
  product_material: 'Wood'
}
{
  product_name: 'Sofa',
  product_material: 'Soft'
}
{
  product_name: 'Bed',
  product_material: 'Steel'
}
{
  product_name: 'Cupboard',
  product_material: 'Soft'
}
{
  product_name: 'Lamp',
  product_material: 'Plastic'
}
db.product.find({
    product_material: "Soft"
})
{
  _id: ObjectId('6a3b5eacfee2965580738ab0'),
  id: 1,
  product_name: 'Chair',
  product_price: 450,
  product_material: 'Soft',
  product_color: 'Red'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab2'),
  id: 3,
  product_name: 'Sofa',
  product_price: 900,
  product_material: 'Soft',
  product_color: 'Blue'
}
{
  _id: ObjectId('6a3b5eacfee2965580738ab4'),
  id: 10,
  product_name: 'Cupboard',
  product_price: 492,
  product_material: 'Soft',
  product_color: 'indigo'
}
db.product.find({
    product_color: "indigo",
    product_price: 492
})
{
  _id: ObjectId('6a3b5eacfee2965580738ab4'),
  id: 10,
  product_name: 'Cupboard',
  product_price: 492,
  product_material: 'Soft',
  product_color: 'indigo'
}
db.product.find({
    product_color: "indigo",
    product_price: 492
})
{
  _id: ObjectId('6a3b5eacfee2965580738ab4'),
  id: 10,
  product_name: 'Cupboard',
  product_price: 492,
  product_material: 'Soft',
  product_color: 'indigo'
}
studentdb